--- a/views/release.ejs
+++ b/views/release.ejs
@@ -173,7 +173,7 @@
         const server = document.getElementById('deployServer').value;
         if (!server) {
           alert('Please enter the server to deploy to.');
-          enableAllButtons();
+          enableAllUserActions();
           return;
         }
 
